# Ipre-sports-results

./: .gitignore  README.md  data_ejemplo.csv  data_ejemplo.sqlite  pyproject.toml  scrapy.cfg
database/raw/Football_manager/: Football_manager_2024_3.csv  Football_manager_2024_3_Arqueros.csv  Football_manager_2024_3_Jugadores.csv  football_manager_2024_3_raw.csv
database/raw/data_jupyternotebooks/Bundesliga/: stats_19-20.csv  stats_20-21.csv  stats_21-22.csv  stats_22-23.csv  stats_23-24.csv
database/raw/data_jupyternotebooks/Ligue-1/: stats_19-20.csv  stats_20-21.csv  stats_23-24.csv
database/raw/data_jupyternotebooks/Premier/: stats_19-20.csv  stats_20-21.csv  stats_21-22.csv  stats_22-23.csv  stats_23-24.csv
database/raw/examples_json_sofascore/: all.json  incidents.json  one_player.json  players.json  rounds.json  statistics.json  stats.json
notebooks/: Modelos_grandes_ligas.ipynb  Modelos_pre_partido.ipynb  Modelos_premier.ipynb
notebooks/WhoScoredEventData/: get_features_matches.ipynb  get_features_temporal_matches.ipynb  team_features_temporal_matches.ipynb
src/database/: __init__.py  database.py  main.py  operate_db.py  populate_countries.py  populate_leagues.py  populate_statistics.py
src/database/models/: __init__.py  bookmaker_odds.py  bookmakers.py  countries.py  leagues.py  match_statistics.py  matches.py  statistics.py
src/scraping/: 1xbet.py  sofascore.py
src/scraping/Scrappy_Football_Manager/: Filtro_Scrappy.ipynb  Functions.py  clubs.txt  players.txt  scrapy.py
src/scraping/scrapy/: items.py  pipelines.py  settings.py  utils.py
src/tests/: initial_data.json  test_database.py
(+9 files in other folders)
